# wg-quickrs-router

./: .gitignore  README.md  prepare-contribution.sh
docs/: BUILDING.md
docs/architecture/: mesh-vpn-design.md
docs/notes/: router-mode.md
docs/quick-start/: docker.md  server.md
src/wg-quickrs/: Cargo.toml
src/wg-quickrs-lib/src/: helpers.rs
src/wg-quickrs-lib/src/types/: api.rs  config.rs
src/wg-quickrs-web/: package-lock.json  package.json  tailwind.config.cjs
src/wg-quickrs-web/src/: App.vue  style.css
src/wg-quickrs-web/src/components/: change-sum.vue  init-wizard.vue  map-visual.vue  router-mode.vue  traffic-graph.vue
src/wg-quickrs-web/src/components/cards/: ControlCenterCard.vue  SystemHealthCard.vue  TrafficAnalysisCard.vue
src/wg-quickrs-web/src/components/dialogs/: api-reference-dialog.vue  custom-dialog.vue  logs-dialog.vue  password-dialog.vue  peer-config-dialog.vue  peer-create-dialog.vue  router-mode-dialog.vue
src/wg-quickrs-web/src/components/islands/: connections.vue  dnsmtu.vue  peer-details.vue  peer-kind-icon.vue  peer-summary.vue  scripts.vue
src/wg-quickrs-web/src/components/ui/: checkbox.vue  (+2 more)
src/wg-quickrs-web/src/js/: api.js  wg-helper.js
src/wg-quickrs/src/: firewall.rs  helpers.rs  main.rs  storage.rs
src/wg-quickrs/src/commands/agent/: init.rs  run.rs
src/wg-quickrs/src/conf/: respond.rs
src/wg-quickrs/src/mode/: mod.rs  mode.rs  persist.rs  routing_pbr.rs  ui_mode.rs
src/wg-quickrs/src/web/: api.rs  init.rs  mod.rs  server.rs
src/wg-quickrs/src/wireguard/: cmd.rs  wg_quick.rs
tests/pytest/: helpers.py
(+8 files in other folders)
